@@ -1,5 +1,10 @@
 $Id$
 
+2016-01-21  Christian Franke  <franke@computer.org>
+
+	ataprint.cpp, smartd.cpp: Don't issue SCT commands if ATA Security
+	is locked (ticket #637).
+
 2016-01-19  Alex Samorukov <samm@os2.kiev.ua>
 
 	drivedb.h:
